--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
    "name": "test",
    "version": "1.0.0",
-   "main": "index.js",
-   "author": "Adrian Pearman <adrianpearman12@gmail.com>",
-   "license": "MIT",
+   "description": "",
+   "main": "server.js",
    "scripts": {
-      "start": "node server.js",
-      "test": ""
+      "test": "npm run lint",
+      "lint": "eslint server.js",
+      "lint:fix": "eslint server.js --fix",
+      "start": "node server.js"
    },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
    "dependencies": {
       "chai": "^4.2.0",
-      "eslint": "^5.16.0",
       "express": "^4.16.4",
       "mocha": "^6.1.4"
+   },
+   "devDependencies": {
+      "eslint": "^5.16.0",
+      "eslint-config-airbnb-base": "^13.1.0",
+      "eslint-plugin-import": "^2.17.2"
    }
 }
